# booksource

./: .gitignore  CMakeLists.txt
include/booksource/: bind.h  booksource.h  constants.h  data.h  engine.h  rule.h  ruledata.h  utils.h  webbook.h
src/: booksource_parser.cpp  engine.cpp  rule.cpp  ruledata.cpp
test/: CMakeLists.txt  test_bs_parse.cpp  test_object_bind.cpp  test_webbook.cpp
